<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreateTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/task_title_edit" />

            <EditText
                android:hint="@string/task_title_example"
                android:id="@+id/task_tittle_add_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="tittle"
                android:inputType="textCapSentences"
                android:paddingTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/task_description_edit" />

            <EditText
                android:id="@+id/task_description_add_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="30dp"
                android:autofillHints="tittle"
                android:inputType="textCapSentences"
                android:paddingTop="4dp" />

            <CheckBox
                android:visibility="gone"
                android:id="@+id/disposableTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_disposable_edit" />

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/PickerStyle"
                android:timePickerMode="spinner" />

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/week_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

            <CalendarView
                android:id="@+id/calendar_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/grey"
        android:src="@drawable/save_task_drawable"
        app:borderWidth="0dp"
        app:maxImageSize="30dp"
        android:contentDescription="@string/task_save_edit" />
</RelativeLayout>